bugfix: No overflow for menu buttons

--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -31,6 +31,7 @@
   margin-bottom: 2px;
   text-align: center;
   border-radius: 2px;
+  overflow: hidden;
   /*letter-spacing: 1px;*/
   padding: 4px 2px 0 10px;
   height: 22px;
